--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: black;
+            background: linear-gradient(to right, #149088, #8BD3A0);
             padding: 15px 20px;
         }
 
